# Okiya

./: CMakeLists.txt  README.md
src/: Board.cpp  Board.hpp  Constraint.cpp  Constraint.hpp  Constraints.cpp  Definitions.hpp  Okiya.cpp  Okiya.hpp  Point.hpp  Tile.cpp  Tile.hpp  main.cpp
